[package]
name = "diro_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diropy"
crate-type = ["cdylib"]

[dependencies]
diro = { path = "../" }
pyo3 = { version = "0.15", features = ["extension-module"] }
